# SBOM_Consolidation_with_Analysis

./: CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
config/: default.yaml
src/sbom_consolidator/: __init__.py  cli.py  orchestrator.py
src/sbom_consolidator/aws/: __init__.py  ai_risk_analyzer.py  bedrock_client.py  security_advisor.py
src/sbom_consolidator/config/: __init__.py  config_manager.py
src/sbom_consolidator/consolidators/: __init__.py  deduplicator.py  export_manager.py  merger.py  sbom_consolidator.py
src/sbom_consolidator/error_handling/: __init__.py  circuit_breaker.py  error_handler.py  exceptions.py  retry_decorator.py
src/sbom_consolidator/generators/: __init__.py  base_generator.py  sbom_generator.py  spdx_formatter.py
src/sbom_consolidator/logging/: __init__.py  log_formatter.py  log_handler.py  logger_config.py
src/sbom_consolidator/models/: __init__.py  dependency.py  repository.py  risk_analysis.py  sbom_document.py
src/sbom_consolidator/repository/: __init__.py  github_client.py  repository_manager.py
src/sbom_consolidator/scanners/: __init__.py  base_scanner.py  dependency_scanner.py  dotnet_parser.py  java_parser.py  nodejs_parser.py  python_parser.py
src/tests/: __init__.py
