[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-sbom-consolidator"
version = "0.1.0"
description = "Automated SBOM generation and consolidation for GitHub repositories"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SBOM Consolidator Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "click>=8.1.0",
    "gitpython>=3.1.0",
    "spdx-tools>=0.8.0",
    "cyclonedx-python-lib>=3.11.0",
    "packaging>=23.0",
    "requirements-parser>=0.5.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
sbom-consolidator = "sbom_consolidator.cli:main"

[project.urls]
Homepage = "https://github.com/example/github-sbom-consolidator"
Repository = "https://github.com/example/github-sbom-consolidator"
Issues = "https://github.com/example/github-sbom-consolidator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sbom_consolidator = ["config/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=sbom_consolidator",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]